# upstream-ontologist

./: .codespellrc  .flake8  .gitattributes  .gitignore  .yamllint  CODE_OF_CONDUCT.md  Cargo.toml  MANIFEST.in  Makefile  PKG-INFO  README.md  SECURITY.md  build.rs  disperse.conf  disperse.toml  pyproject.toml  releaser.conf  setup.cfg  setup.py  tox.ini  upstream_ontologist.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: cargo-publish.yaml  maturin.yaml  pythonpackage.yml  rust.yml  wheels.yaml
crates/upstream-ontologist-py/: Cargo.toml
crates/upstream-ontologist-py/src/: lib.rs
debian/: changelog  control  copyright  guess-upstream-metadata.1  manpages  rules  watch
debian/cargo_home/: config.toml
debian/patches/: distro-info-0.4  drop-gix-config  drop-script  drop-xml  env-logger  fix-gix-config  gix-config  lazy-regex  mailparse  older-env-logger  older-mailparse  older-pulldown-cmark  older-pyproject-toml  older-reqwest  older-rust-ini  older-tempfile  older-xmltree  pulldown-cmark  pyo3-0.20  pyo3-log  pyproject-toml  pyproject-toml-0.7  relax-pretty-assertions  relax-semver  relax-tempfile  reqwest  rst-parser  rust-ini  rust-ini-0.18  scraper  select  series  xml
debian/tests/: control
debian/upstream/: metadata
docs/: model.md  vcs.md
man/: autodoap.1  guess-upstream-metadata.1
py/upstream_ontologist/: __init__.py  _upstream_ontologist.pyi  debian.py  guess.py  readme.py  vcs.py
python/upstream_ontologist/: debian.py  guess.py
readme_tests/aiozipkin/: README.rst  description
readme_tests/argparse/: README.rst  description
readme_tests/bitlbee/: description
readme_tests/bup/: README.md  description
readme_tests/cbor2/: description
readme_tests/django-ical/: description
readme_tests/dulwich/: description
readme_tests/perl-timedate/: README  description
readme_tests/perl5-xml-compile-cache/: README.md  description
readme_tests/pylint-flask/: description
readme_tests/python-icalendar/: description
readme_tests/ruby-sha3/: description
readme_tests/saneyaml/: README.rst
readme_tests/text-worddif/: description
src/: breezyshim.rs  debian.rs  extrapolate.rs  github.rs  homepage.rs  http.rs  lib.rs  readme.rs  repology.rs  vcs.rs  vcs_command.rs
src/forges/: mod.rs  sourceforge.rs
src/providers/: arch.rs  authors.rs  autoconf.rs  composer_json.rs  debian.rs  doap.rs  git.rs  go.rs  gobo.rs  haskell.rs  launchpad.rs  maven.rs  meson.rs  metadata_json.rs  metainfo.rs  mod.rs  node.rs  nuspec.rs  ocaml.rs  package_json.rs  package_xml.rs  package_yaml.rs  pecl.html  perl.rs  php.rs  pubspec.rs  python.rs  r.rs  repology.rs  ruby.rs  rust.rs  security_md.rs  waf.rs
src/testdata/: cpan.json  crates.io.json  docdb-v.json  gtab.json  hg-diff.json  npm.json  pecl.html  pypi.json  rubygem.json  swh.html  zsh.json
testdata/cabal/: blah.cabal  expected.yaml
testdata/cabal/debian/: control
testdata/cargo/: Cargo.toml  expected.yaml
testdata/cargo-invalid/: Cargo.toml  expected.yaml
testdata/cargo-invalid/debian/: control
testdata/composer.json/: expected.yaml
testdata/configure/: expected.yaml
testdata/copyright-meta/: expected.yaml
testdata/copyright-meta/debian/: copyright
testdata/copyright-more-on-line/: expected.yaml
testdata/copyright-more-on-line/debian/: copyright
testdata/doap/: blah.doap  expected.yaml
testdata/gemspec/: expected.yaml
testdata/get-orig-source/: expected.yaml
testdata/get-orig-source/debian/: get-orig-source.sh
testdata/go/: expected.yaml
testdata/go/debian/: control
testdata/homepage/: expected.yaml
testdata/homepage/debian/: control
testdata/js/: expected.yaml
testdata/js2/: expected.yaml  package.json
testdata/js3/: expected.yaml  package.json
testdata/line-interrupted/: DESCRIPTION  expected.yaml
testdata/machine-copyright/: expected.yaml
testdata/machine-copyright/debian/: copyright
testdata/meta.json/: META.json  expected.yaml
testdata/meta.yml/: META.yml  expected.yaml
testdata/metadata-json-cvs-array/: expected.yaml  metadata.json
testdata/metadata.json/: expected.yaml
testdata/native/: configure
testdata/override/: expected.yaml
testdata/package.json/: expected.yaml
testdata/package.json2/: expected.yaml  package.json
testdata/package.xml/: expected.yaml  package.xml
testdata/package.xml2/: expected.yaml
testdata/package.yaml/: expected.yaml
testdata/perl/: dist.ini  expected.yaml
testdata/perl-parsingerror/: dist.ini  expected.yaml
testdata/pkg-info/: PKG-INFO  expected.yaml
testdata/poetry/: expected.yaml  pyproject.toml
testdata/pom/: expected.yaml  pom.xml
testdata/pubspec.yml/: expected.yaml  pubspec.yml
testdata/python/: expected.yaml  setup.py
testdata/python/debian/: control
testdata/r-description/: DESCRIPTION  expected.yaml
testdata/readme-command/: README  expected.yaml
testdata/readme-other/: README  expected.yaml
testdata/security.md/: SECURITY.md  expected.yaml
testdata/security.md/debian/: control
testdata/setup.py1/: README.md  expected.yaml  setup.cfg  setup.py
testdata/travis.yml/: .travis.yml  expected.yaml
testdata/watch/: expected.yaml
testdata/watch-git/: expected.yaml
testdata/watch/debian/: watch
testdata/watch2/: expected.yaml
testdata/watch2/debian/: watch
tests/: __init__.py  test_data.py  test_debian.py  test_guess.py  test_readme.py  test_upstream_ontologist.py  test_vcs.py  testdata.py
tests/readme_data/jupyter-client/: description
tests/readme_data/python-rsa/: description
tests/readme_data/ruby-columnize/: description
upstream-ontologist-py/: Cargo.toml
upstream-ontologist-py/src/: lib.rs
upstream_ontologist/: __init__.py  __main__.py  _upstream_ontologist.pyi  codemeta.py  debian.py  doap.py  guess.py  homepage.py  readme.py  vcs.py
upstream_ontologist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
upstream_ontologist/debian/: __init__.py
upstream_ontologist/tests/: __init__.py  test_debian.py  test_readme.py  test_upstream_metadata.py  test_upstream_ontologist.py  test_vcs.py
(+25 files in other folders)
