[package]
name = "upstream-ontologist"
version = "0.2.0"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "tracking of upstream project metadata"
repository = "https://github.com/jelmer/upstream-ontologist.git"
homepage = "https://github.com/jelmer/upstream-ontologist"
default-run = "guess-upstream-metadata"
include = ["testdata", "readme_tests", "man", "build.rs", "src/*.rs", "README.md", "src/**/*.rs"]

[dependencies]
log = "0.4"
shlex = "1.1.0"
serde_json = "1.0"
lazy_static = "1"
regex = "1"
url = "2"
xmltree = ">=0.10"
configparser = "3"
serde_yaml = "0.9"
percent-encoding = "2"
html5ever = ">=0.26"
chrono = "0.4"
textwrap = ">=0.16"
lazy-regex = ">=2"
breezyshim = { version = ">=0.1.206", default-features = false, features = ["auto-initialize"] }
debian-watch = { version = "0.2", optional = true }
debian-changelog = { version = "0.2", optional = true }
debbugs = "0.1"
clap = { version = "4", features = ["derive", "env"], optional = true }
maplit = "1"
env_logger = { version = ">=0.10", optional = true }
makefile-lossless = { version = "0.1", optional = true }
debian-copyright = { version = "0.1", optional = true }
debian-control = { version = "0.1", optional = true }
pulldown-cmark = ">=0.9"
debcargo = { version = "2.7", optional = true }
# See https://github.com/flying-sheep/rust-rst/issues/56
uo_rst_parser = "0.4.2"
rst_renderer = "0.4.0"
#rst_parser = { git = "https://github.com/flying-sheep/rust-rst" }
#rst_renderer = { git = "https://github.com/flying-sheep/rust-rst" }
select = "0.6.0"
semver = { version = "1", features = ["serde"] }
async-trait = "0.1.83"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
debversion = { version = "0.4.4", optional = true }

[features]
default = ["git-config", "launchpad", "opam", "dist-ini", "cargo", "r-description", "pyproject-toml", "python-pkginfo", "debian", "pyo3", "setup-cfg"]
git-config = ["dep:gix-config"]
launchpad = ["dep:distro-info"]
opam = ["dep:opam-file-rs"]
dist-ini = ["dep:rust-ini"]
cargo = ["dep:toml"]
r-description = ["dep:r-description"]
pyproject-toml = ["dep:pyproject-toml"]
python-pkginfo = ["dep:python-pkginfo"]
setup-cfg = ["dep:rust-ini"]
debcargo = ["dep:debcargo"]
debian = ["dep:debian-watch", "dep:makefile-lossless", "dep:debian-changelog", "dep:debian-control", "dep:debian-copyright", "dep:debversion"]
pyo3 = ["dep:pyo3"]
cli = ["dep:clap", "dep:env_logger"]
debversion = ["dep:debversion"]

[lib]

[dev-dependencies]
pretty_assertions = ">=1.4"
tempfile = ">=3"

[build-dependencies]
quote = "1.0.37"

[dependencies.pyo3]
version = ">=0.22"
optional = true

[dependencies.reqwest]
version = ">=0.11"
features = [ "blocking", "json",]
default-features = false

[dependencies.rust-ini]
version = ">=0.18"
optional = true

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.opam-file-rs]
version = "0.1"
optional = true

[dependencies.gix-config]
version = ">=0.40"
optional = true

[dependencies.distro-info]
version = "0.4"
optional = true

[dependencies.toml]
version = ">=0.8"
optional = true

[dependencies.r-description]
version = ">=0.2.2"
optional = true

[dependencies.pyproject-toml]
version = "0.13.3"
optional = true

[dependencies.python-pkginfo]
version = ">=0.5"
optional = true

[[bin]]
name = "autodoap"
required-features = ["cli"]

[[bin]]
name = "autocodemeta"
required-features = ["cli"]

[[bin]]
name = "guess-upstream-metadata"
required-features = ["cli"]
