[package]
name = "upstream-ontologist"
version = "0.2.11"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "tracking of upstream project metadata"
repository = "https://github.com/jelmer/upstream-ontologist.git"
homepage = "https://github.com/jelmer/upstream-ontologist"
default-run = "guess-upstream-metadata"
include = ["testdata", "readme_tests", "man", "build.rs", "src/*.rs", "README.md", "src/**/*.rs"]

[dependencies]
log = "0.4"
shlex = ">=1.3.0"
serde_json = ">=1.0.108"
lazy_static = ">=1.5.0"
regex = ">=1.10.4"
url = ">=2.5.7"
xmltree = ">=0.11.0"
configparser = ">=3.1.0"
serde_yaml = ">=0.9.34"
percent-encoding = ">=2.3.2"
html5ever = ">=0.26"
chrono = ">=0.4.42"
textwrap = ">=0.16.2"
lazy-regex = ">=2"
breezyshim = { version = ">=0.6.5", default-features = false, features = ["auto-initialize"] }
debian-watch = { version = ">=0.2.8", optional = true }
debian-changelog = { version = ">=0.2.1", optional = true }
debbugs = ">=0.1.5"
clap = { version = ">=4.5.48", features = ["derive", "env"], optional = true }
maplit = ">=1.0.2"
env_logger = { version = ">=0.11.8", optional = true }
makefile-lossless = { version = ">=0.2.1", optional = true }
debian-copyright = { version = ">=0.1.28", optional = true }
debian-control = { version = ">=0.1.48", optional = true }
pulldown-cmark = ">=0.13.0"
debcargo = { version = ">=2.7.10", optional = true }
# See https://github.com/flying-sheep/rust-rst/issues/56
uo_rst_parser = ">=0.4.3"
rst_renderer = ">=0.4.2"
#rst_parser = { git = "https://github.com/flying-sheep/rust-rst" }
#rst_renderer = { git = "https://github.com/flying-sheep/rust-rst" }
select = ">=0.6.1"
tendril = ">=0.4.3, <0.5"
bit-vec = ">=0.6.3, <0.9"
bit-set = ">=0.5.3, <0.9"
openssl = ">=0.10.64, <0.11"
# Note: ahash, chumsky, rfc2047-decoder, hashbrown are added to work around
# minimal-versions build failures in python-pkginfo's transitive dependencies
ahash = ">=0.8.11, <0.9"
chumsky = ">=0.9.3, <2"
rfc2047-decoder = ">=1.0.6, <2"
hashbrown = ">=0.14.3, <0.17"
pyo3-filelike = ">=0.5.0, <0.6"
semver = { version = ">=1.0.27", features = ["serde"] }
async-trait = ">=0.1.89"
tokio = { version = ">=1.47.1", features = ["full"] }
futures = ">=0.3.31"
debversion = { version = "0.4", optional = true }

[features]
default = ["git-config", "launchpad", "opam", "dist-ini", "cargo", "r-description", "pyproject-toml", "python-pkginfo", "debian", "pyo3", "setup-cfg"]
git-config = ["dep:gix-config"]
launchpad = ["dep:distro-info"]
opam = ["dep:opam-file-rs"]
dist-ini = ["dep:rust-ini"]
cargo = ["dep:toml"]
r-description = ["dep:r-description"]
pyproject-toml = ["dep:pyproject-toml"]
python-pkginfo = ["dep:python-pkginfo"]
setup-cfg = ["dep:rust-ini"]
debcargo = ["dep:debcargo"]
debian = ["dep:debian-watch", "dep:makefile-lossless", "dep:debian-changelog", "dep:debian-control", "dep:debian-copyright", "dep:debversion"]
pyo3 = ["dep:pyo3"]
cli = ["dep:clap", "dep:env_logger"]
debversion = ["dep:debversion"]

[lib]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[build-dependencies]
quote = ">=1.0.41"

[dependencies.pyo3]
version = ">=0.25.1"
optional = true

[dependencies.reqwest]
version = ">=0.12.23"
features = [ "blocking", "json",]
default-features = false

[dependencies.rust-ini]
version = ">=0.21.3"
optional = true

[dependencies.serde]
version = ">=1.0.228"
features = [ "derive",]

[dependencies.opam-file-rs]
version = ">=0.1.5"
optional = true

[dependencies.gix-config]
version = ">=0.47.1"
optional = true

[dependencies.distro-info]
version = "0.4"
optional = true

[dependencies.toml]
version = ">=0.8"
optional = true

[dependencies.r-description]
version = ">=0.3.5"
optional = true

[dependencies.pyproject-toml]
version = ">=0.13.6"
optional = true

[dependencies.python-pkginfo]
version = ">=0.6.6"
optional = true

[[bin]]
name = "autodoap"
required-features = ["cli"]

[[bin]]
name = "autocodemeta"
required-features = ["cli"]

[[bin]]
name = "guess-upstream-metadata"
required-features = ["cli"]
