[package]
name = "upstream-ontologist"
version = "0.3.1"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "tracking of upstream project metadata"
repository = "https://github.com/jelmer/upstream-ontologist.git"
homepage = "https://github.com/jelmer/upstream-ontologist"
default-run = "guess-upstream-metadata"
include = ["testdata", "readme_tests", "man", "build.rs", "src/*.rs", "README.md", "src/**/*.rs"]

[dependencies]
log = ">=0.4.21, <0.5"
shlex = ">=1.3.0, <2"
serde_json = ">=1.0.120, <2"
lazy_static = ">=1.5.0, <2"
regex = ">=1.11.0, <2"
url = ">=2.5.4, <3"
xmltree = ">=0.10.3, <0.12"
configparser = ">=3.0.3, <4"
serde_yaml = ">=0.9.34, <0.10"
percent-encoding = ">=2.3.1, <3"
html5ever = ">=0.26, <0.36"
chrono = ">=0.4.42, <0.5"
textwrap = ">=0.16.2, <0.17"
lazy-regex = ">=3.4, <4"
breezyshim = { version = ">=0.7.0, <0.8", default-features = false, features = ["auto-initialize"] }
debian-watch = { version = ">=0.2.8, <0.3", optional = true }
debian-changelog = { version = ">=0.2.1, <0.3", optional = true }
debbugs = ">=0.1.5, <0.2"
clap = { version = ">=4.5.48, <5", features = ["derive", "env"], optional = true }
maplit = ">=1.0.2, <2"
env_logger = { version = ">=0.11.8, <0.12", optional = true }
makefile-lossless = { version = ">=0.2.1, <0.3", optional = true }
debian-copyright = { version = ">=0.1.28, <0.2", optional = true }
debian-control = { version = ">=0.1.48, <0.3", optional = true }
pulldown-cmark = ">=0.13.0, <0.14"
debcargo = { version = ">=2.7.10, <3", optional = true }
rst_parser = ">=0.4.2, <0.5"
rst_renderer = ">=0.4.2, <0.5"
select = ">=0.6.0, <0.7"
tendril = ">=0.4.3, <0.5"
bit-vec = ">=0.6.3, <0.9"
bit-set = ">=0.5.3, <0.9"
openssl = ">=0.10.64, <0.11"
pyo3-filelike = ">=0.5.1, <0.6"
semver = { version = ">=1.0.26, <2", features = ["serde"] }
async-trait = ">=0.1.89, <0.2"
tokio = { version = ">=1.47.1, <2", features = ["full"] }
futures = ">=0.3.31, <0.4"
debversion = { version = ">=0.4.7, <0.6", optional = true }

[features]
default = ["git-config", "launchpad", "opam", "dist-ini", "cargo", "r-description", "pyproject-toml", "python-pkginfo", "debian", "pyo3", "setup-cfg"]
git-config = ["dep:gix-config"]
launchpad = ["dep:distro-info"]
opam = ["dep:opam-file-rs"]
dist-ini = ["dep:rust-ini"]
cargo = ["dep:toml"]
r-description = ["dep:r-description"]
pyproject-toml = ["dep:pyproject-toml"]
python-pkginfo = ["dep:python-pkginfo"]
setup-cfg = ["dep:rust-ini"]
debcargo = ["dep:debcargo"]
debian = ["dep:debian-watch", "dep:makefile-lossless", "dep:debian-changelog", "dep:debian-control", "dep:debian-copyright", "dep:debversion"]
pyo3 = ["dep:pyo3"]
cli = ["dep:clap", "dep:env_logger"]
debversion = ["dep:debversion"]

[lib]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.20"

[build-dependencies]
quote = ">=1.0.40, <2"

[dependencies.pyo3]
version = ">=0.27.0, <0.28"
optional = true

[dependencies.reqwest]
version = ">=0.12.15, <0.13"
features = [ "blocking", "json",]
default-features = false

[dependencies.rust-ini]
version = ">=0.21.1, <0.22"
optional = true

[dependencies.serde]
version = ">=1.0.219, <2"
features = [ "derive",]

[dependencies.opam-file-rs]
version = ">=0.1.5, <0.2"
optional = true

[dependencies.gix-config]
version = ">=0.42.0, <0.48"
optional = true

[dependencies.distro-info]
version = ">=0.4, <0.5"
optional = true

[dependencies.toml]
version = ">=0.9.0, <0.10"
optional = true

[dependencies.r-description]
version = ">=0.3.5, <0.4"
optional = true

[dependencies.pyproject-toml]
version = ">=0.13.4, <0.14"
optional = true

[dependencies.python-pkginfo]
version = ">=0.6.5, <0.7"
optional = true

[[bin]]
name = "autodoap"
required-features = ["cli"]

[[bin]]
name = "autocodemeta"
required-features = ["cli"]

[[bin]]
name = "guess-upstream-metadata"
required-features = ["cli"]
