[build-system]
requires = ["setuptools>=61.2", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    # No type hints yet
    "ruamel.*",
    "pysimplesoap.*",
    "debianbts.*",
    "setuptools.*",
    "pcre.*",
    "lxml.*",
    # Not available on Mac OS X
    "debmutate.*",
]
ignore_missing_imports = true

[project]
name = "upstream-ontologist"
authors = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
maintainers = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
description = "tracking of upstream project metadata"
requires-python = ">= 3.7"
dependencies = [
    "python_debian",
    'typing_extensions;python_version<="3.7"',
    "ruamel.yaml",
    "breezy>=3.3.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/jelmer/upstream-ontologist"
Repository = "https://github.com/jelmer/upstream-ontologist.git"

[project.optional-dependencies]
cargo = ["tomlkit"]
debian_changelog = [
    "python-debianbts",
    "httplib2>=0.7.8",
    "python_debian",
]
debian_watch = ["debmutate[watch]>=0.66"]
debian_rules = ["debmutate"]
pyproject = ["tomlkit"]
homepage = ["bs4"]
readme = [
    "docutils",
    "lxml",
    "bs4",
    "markdown",
    "pygments",
]
"setup.cfg" = ["setuptools"]
testing = ["breezy>=3.3.0"]

[project.scripts]
guess-upstream-metadata = "upstream_ontologist.__main__:main"
autodoap = "upstream_ontologist.doap:main"
autocodemeta = "upstream_ontologist.codemeta:main"

[tool.setuptools]
packages = [
    "upstream_ontologist",
    "upstream_ontologist.debian",
]
include-package-data = false

[tool.setuptools.package-data]
upstream_ontologist = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "upstream_ontologist.version_string"}
