[build-system]
requires = ["setuptools>=61.2", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    # No type hints yet
    "ruamel.*",
    "setuptools.*",
    "pcre.*",
    "lxml.*",
]
ignore_missing_imports = true

[project]
name = "upstream-ontologist"
authors = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
maintainers = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
description = "tracking of upstream project metadata"
requires-python = ">= 3.8"
dependencies = [
    "python_debian",
    "ruamel.yaml",
    "breezy>=3.3.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/jelmer/upstream-ontologist"
Repository = "https://github.com/jelmer/upstream-ontologist.git"

[project.optional-dependencies]
debian_changelog = [
    "httplib2>=0.7.8",
    "python_debian",
]
homepage = ["bs4"]
readme = [
    "docutils",
    "lxml",
    "bs4",
    "markdown",
    "pygments",
]
"setup.cfg" = ["setuptools"]
testing = ["breezy>=3.3.0"]

[project.scripts]
guess-upstream-metadata = "upstream_ontologist.__main__:main"

[tool.setuptools]
packages = [
    "upstream_ontologist",
    "upstream_ontologist.debian",
]
include-package-data = false

[tool.setuptools.package-data]
upstream_ontologist = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "upstream_ontologist.version_string"}

[tool.ruff]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",  # missing-type-self
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D204",
    "D205",
    "D417",
    "E501",  # line too long
    "E741",  # ambiguous variable name
]
target-version = "py37"

[tool.ruff.pydocstyle]
convention = "google"
