[build-system]
requires = ["setuptools>=61.2", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    # No type hints yet
    "ruamel.*",
    "setuptools.*",
    "pcre.*",
    "lxml.*",
    "breezy.*",
]
ignore_missing_imports = true

[project]
name = "upstream-ontologist"
authors = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
maintainers = [{name = "Jelmer Vernooij", email = "jelmer@jelmer.uk"}]
description = "tracking of upstream project metadata"
requires-python = ">= 3.7"
dependencies = [
    "python_debian",
    "ruamel.yaml",
    "breezy>=3.3.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/jelmer/upstream-ontologist"
Repository = "https://github.com/jelmer/upstream-ontologist.git"

[project.optional-dependencies]
debian_changelog = [
    "httplib2>=0.7.8",
    "python_debian",
]
homepage = ["bs4"]
readme = [
    "docutils",
    "lxml",
    "bs4",
    "pygments",
]
"setup.cfg" = ["setuptools"]
testing = ["breezy>=3.3.0"]
dev = ["ruff==0.4.5"]

[project.scripts]
guess-upstream-metadata = "upstream_ontologist.__main__:main"

[tool.setuptools]
packages = [
    "upstream_ontologist",
]
include-package-data = false

[tool.setuptools.package-data]
upstream_ontologist = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "upstream_ontologist.version_string"}

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",  # missing-type-self
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D204",
    "D205",
    "D417",
    "E501",  # line too long
    "E741",  # ambiguous variable name
]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel]
before-build = "pip install -U setuptools-rust && rustup default stable && rustup show"
environment = {PATH="$HOME/.cargo/bin:$PATH"}
# breezyshim needs to embed python, which pypy doesn't support
skip = "pp*-* *musllinux*"

[tool.cibuildwheel.linux]
before-build = "if command -v yum; then yum -y install openssl-devel; fi && if command -v apk; then apk add openssl-dev pkgconfig; fi && pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"

[tool.cibuildwheel.macos]
macos = "x86_64 arm64 universal2"
before-build = "brew install openssl && pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
before-build = "pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup target add aarch64-apple-darwin"

[tool.cibuildwheel.windows]
before-build = "vcpkg install openssl && pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"
environment = {CMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake"}
