[metadata]
name = upstream-ontologist
version = attr:upstream_ontologist.version_string
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
maintainer = Jelmer Vernooij
maintainer_email = jelmer@jelmer.uk
url = https://github.com/jelmer/upstream-ontologist
description = tracking of upstream project metadata
project_urls =
    Repository=https://github.com/jelmer/upstream-ontologist.git

[options]
packages =
    upstream_ontologist
    upstream_ontologist.debian
install_requires =
    python_debian
    debmutate[watch]
tests_require = breezy

[options.entry_points]
console_scripts =
    guess-upstream-metadata=upstream_ontologist.__main__:main
    autodoap=upstream_ontologist.doap:main
    autocodemeta=upstream_ontologist.codemeta:main

[options.extras_require]
cargo = tomlkit
readme =
    docutils
    lxml
    bs4
    markdown
setup.cfg = setuptools

[mypy]
ignore_missing_imports = True
