[package]
name = "upstream-ontologist-py"
version = { workspace = true }
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/jelmer/upstream-ontologist.git"
homepage = "https://github.com/jelmer/upstream-ontologist"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
upstream-ontologist = { path = ".." }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
reqwest = { version = ">=0.11", features=["blocking", "json"], default-features = false }
url = "2.5"
serde_json = "1"
log = "0.4"

[features]
default = []
extension-module = ["pyo3/extension-module"]
debcargo = ["upstream-ontologist/debcargo"]
