[metadata]
name = upstream-ontologist
version = 0.1.35
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
maintainer = Jelmer Vernooij
maintainer_email = jelmer@jelmer.uk
url = https://github.com/jelmer/upstream-ontologist
description = tracking of upstream project metadata
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Repository=https://github.com/jelmer/upstream-ontologist.git

[options]
python_requires = >= 3.7
packages =
    upstream_ontologist
    upstream_ontologist.debian
install_requires =
    python_debian
    typing_extensions;python_version<="3.7"
    ruamel.yaml
    # Ideally this would be an optional dependency
    breezy>=3.3.0
tests_require = breezy>=3.3.0

[options.entry_points]
console_scripts =
    guess-upstream-metadata=upstream_ontologist.__main__:main
    autodoap=upstream_ontologist.doap:main
    autocodemeta=upstream_ontologist.codemeta:main

[options.extras_require]
cargo = tomlkit
debian_changelog =
    python-debianbts
    httplib2>=0.7.8
    python_debian
debian_watch = debmutate[watch]>=0.59
debian_rules = debmutate
pyproject = tomlkit
homepage =
    bs4
readme =
    docutils
    lxml
    bs4
    markdown
    pygments
setup.cfg = setuptools

[options.package_data]
upstream_ontologist = py.typed
